objects/Loan__c.object
<CustomObject>
    <description>To capture details related to loans for client cases.</description>
    <fields>
        <fullName>AccountAddress__c</fullName>
        <label>Account Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>AccountBalance__c</fullName>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address 1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicationStatus__c</fullName>
        <description>DO NOT USE</description>
        <label>Application Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssetType__c</fullName>
        <label>Asset Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Automobile</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Certificate of Deposit - CDs</fullName>
                </value>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Client Sweat Equity</fullName>
                </value>
                <value>
                    <fullName>Current Balance</fullName>
                </value>
                <value>
                    <fullName>Education Saving Programs</fullName>
                </value>
                <value>
                    <fullName>HOPE - California National</fullName>
                </value>
                <value>
                    <fullName>HOPE - Etrade</fullName>
                </value>
                <value>
                    <fullName>IDA - Commercial Capital</fullName>
                </value>
                <value>
                    <fullName>IDA - Union Bank</fullName>
                </value>
                <value>
                    <fullName>IDEA - Commercial Capital</fullName>
                </value>
                <value>
                    <fullName>Investments</fullName>
                </value>
                <value>
                    <fullName>IRA/Keogh Accounts</fullName>
                </value>
                <value>
                    <fullName>Matched Amount</fullName>
                </value>
                <value>
                    <fullName>Mattress Money</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Recreational Vehicle</fullName>
                </value>
                <value>
                    <fullName>Retirement (401k/ESOP/SEP/other)</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ClientCase__c</fullName>
        <label>Client Case</label>
        <referenceTo>ClientCase__c</referenceTo>
        <relationshipLabel>Loan</relationshipLabel>
        <relationshipName>Loan</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ClientDiscriminationVictim__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Discrimination Victim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClosingAgent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Agent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Affiliate</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loan</relationshipLabel>
        <relationshipName>Loan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactFax__c</fullName>
        <label>Contact Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <label>Contact Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeferralType__c</fullName>
        <label>Deferral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Due at Death</fullName>
                </value>
                <value>
                    <fullName>Due at Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeferredTerm__c</fullName>
        <inlineHelpText>Enter the number of months payments are deferred or &quot;due on sale&quot;.</inlineHelpText>
        <label>Deferred Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EquityandOutofPocketInfo__c</fullName>
        <description>Create a red/green flag on the loan object called &quot;Equity and Out of Pocket Info&quot;. See attached file named &quot;ORS Financing Validation Flags for more details on the logic for returning red vs green.</description>
        <formula>If(
AND(
TEXT(FinancingType__c) == &apos;Gift of Equity&apos;,
OR(
TEXT(FundingType__c)== &apos;NWOs Revolving Loan Fund (including CDBG &amp; HOME funded RLF)&apos;,
TEXT(FundingType__c) == &apos;Private Lending Institution (bank/thrift/mortgage company/etc.)&apos;,
TEXT(FundingType__c) == &apos;Government (Federal/State/Local)&apos;
)
),
&apos;Financing type Gift of Equity must be reported with Funding Type Other Sources... and Funding Source must be Not Applicable&apos;,

If(
AND(
TEXT(FinancingType__c) == &apos;Client out of pocket (total)&apos;,
NOT(
OR(
ISPICKVAL(FundingType__c, &quot;Client portion (out-of-pocket)&quot;),
ISPICKVAL(FundingType__c, &quot;Client Sweat Equity&quot;)
)
)
),
&apos;Financing Type Client out of pocket (total) can only be used with Funding Type Client portion (out-of-pocket) or Client Sweat Equity&apos;,
&apos;Passed&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Equity and Out of Pocket Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceTypeAfter__c</fullName>
        <label>Finance Type After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>FHA</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>USDA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinanceTypeBefore__c</fullName>
        <label>Finance Type Before</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conventional</fullName>
                </value>
                <value>
                    <fullName>FHA</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>USDA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinancialSelfSufficiency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Self Sufficiency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinancingType__c</fullName>
        <label>Financing Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MortgageGrantType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First mortgage</fullName>
                </value>
                <value>
                    <fullName>Second mortgage: Tandem 20% or more</fullName>
                </value>
                <value>
                    <fullName>Second mortgage: Down Payment/Closing Cost Assistance</fullName>
                </value>
                <value>
                    <fullName>Second mortgage: Rehabilitation</fullName>
                </value>
                <value>
                    <fullName>Second mortgage: Other</fullName>
                </value>
                <value>
                    <fullName>All other mortgages</fullName>
                </value>
                <value>
                    <fullName>First grant</fullName>
                </value>
                <value>
                    <fullName>All other grants</fullName>
                </value>
                <value>
                    <fullName>Client out of pocket (total)</fullName>
                </value>
                <value>
                    <fullName>Unsecured loan</fullName>
                </value>
                <value>
                    <fullName>203k Mortgage</fullName>
                </value>
                <value>
                    <fullName>Gift of Equity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forgiveable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forgiveable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FundingSource__c</fullName>
        <label>Funding Source</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FinancingType__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>CDBG</fullName>
                </value>
                <value>
                    <fullName>Chase</fullName>
                </value>
                <value>
                    <fullName>CitiMortgage Inc</fullName>
                </value>
                <value>
                    <fullName>Credit Union</fullName>
                </value>
                <value>
                    <fullName>DOE (WAP) Weatherization Funds</fullName>
                </value>
                <value>
                    <fullName>Flagstar Bancorp</fullName>
                </value>
                <value>
                    <fullName>Flagstar Bank FSB</fullName>
                </value>
                <value>
                    <fullName>Funded with a lender participation pool that NWO administers</fullName>
                </value>
                <value>
                    <fullName>HOME Funds</fullName>
                </value>
                <value>
                    <fullName>HUD-Guaranteed Section 184 Native American Mortgage</fullName>
                </value>
                <value>
                    <fullName>loanDepot</fullName>
                </value>
                <value>
                    <fullName>MetLife Home Loans</fullName>
                </value>
                <value>
                    <fullName>PennyMac Mortgage Investment Trust</fullName>
                </value>
                <value>
                    <fullName>PHH Corp</fullName>
                </value>
                <value>
                    <fullName>Project Reinvest Homeownership</fullName>
                </value>
                <value>
                    <fullName>Provident Funding Associates</fullName>
                </value>
                <value>
                    <fullName>Quicken</fullName>
                </value>
                <value>
                    <fullName>Re-Loaned Wells LIFT</fullName>
                </value>
                <value>
                    <fullName>ResCap (GMAC)</fullName>
                </value>
                <value>
                    <fullName>SunTrust Mortgage Inc</fullName>
                </value>
                <value>
                    <fullName>USDA RD 502D</fullName>
                </value>
                <value>
                    <fullName>USDA RD 502G</fullName>
                </value>
                <value>
                    <fullName>USDA RD Rehab (504 or HPG)</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo &amp; Co.</fullName>
                </value>
                <value>
                    <fullName>Wells LIFT</fullName>
                </value>
                <value>
                    <fullName>Wells Rural</fullName>
                </value>
                <value>
                    <fullName>U.S. Bank Home Mortgage</fullName>
                </value>
                <value>
                    <fullName>Other Government</fullName>
                </value>
                <value>
                    <fullName>Other Private Lending Institution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FundingSourcetxt__c</fullName>
        <label>Funding Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingType__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FundingSource__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NWOs Revolving Loan Fund (including CDBG &amp; HOME funded RLF)</fullName>
                </value>
                <value>
                    <fullName>Private Lending Institution (bank/thrift/mortgage company/etc.)</fullName>
                </value>
                <value>
                    <fullName>Government (Federal/State/Local)</fullName>
                </value>
                <value>
                    <fullName>Other sources (e.g. FHLB/AHP/Corporations/Foundations/NWA/NCC)</fullName>
                </value>
                <value>
                    <fullName>NWOs other funds</fullName>
                </value>
                <value>
                    <fullName>Client portion (out-of-pocket)</fullName>
                </value>
                <value>
                    <fullName>Client Sweat Equity</fullName>
                </value>
                <value>
                    <fullName>Non NWO CDFI</fullName>
                </value>
                <value>
                    <fullName>HFA</fullName>
                </value>
                <value>
                    <fullName>City Government</fullName>
                </value>
                <value>
                    <fullName>Corporation</fullName>
                </value>
                <value>
                    <fullName>Federal Government</fullName>
                </value>
                <value>
                    <fullName>Foundation</fullName>
                </value>
                <value>
                    <fullName>NCC</fullName>
                </value>
                <value>
                    <fullName>NeighborWorks America</fullName>
                </value>
                <value>
                    <fullName>NWO Loan Funds</fullName>
                </value>
                <value>
                    <fullName>NWO Other</fullName>
                </value>
                <value>
                    <fullName>Other Source</fullName>
                </value>
                <value>
                    <fullName>Private Lending Institution</fullName>
                </value>
                <value>
                    <fullName>State or County Government</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HomeownershipVoucher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Homeownership Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncomeDoc__c</fullName>
        <label>Income Doc</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Document Provided</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
                <value>
                    <fullName>Reduced Doc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntakeLoanHasInterestRate__c</fullName>
        <label>Intake Loan Has Interest Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntakeLoanIsInterestOnly__c</fullName>
        <label>Intake Loan Is Interest Only</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntakeLoanIsaHybridARMLoan__c</fullName>
        <label>Intake Loan Is a Hybrid ARM Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntakeLoanIsanOptionARMLoan__c</fullName>
        <label>Intake Loan Is an Option ARM Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntakeLoanType__c</fullName>
        <label>Intake Loan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed rate currently under 8% as a result of loan modification in last six months</fullName>
                </value>
                <value>
                    <fullName>Fixed rate currently under 8%</fullName>
                </value>
                <value>
                    <fullName>Fixed rate currently 8% or greater</fullName>
                </value>
                <value>
                    <fullName>ARM currently under 8%</fullName>
                </value>
                <value>
                    <fullName>ARM currently at 8% or greater</fullName>
                </value>
                <value>
                    <fullName>Fixed rate currently 8% or greater as a result of loan modification in last six months</fullName>
                </value>
                <value>
                    <fullName>ARM currently under 8% as a result of loan modification in last six months</fullName>
                </value>
                <value>
                    <fullName>ARM currently at 8% or greater as a result of loan modification in last six months</fullName>
                </value>
                <value>
                    <fullName>Client did not disclose</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntakeLoanisFHAOrVAInsured__c</fullName>
        <label>Intake Loan is FHA Or VA Insured</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IntakeLoanisaPrivatelyHeld__c</fullName>
        <label>Intake Loan is a Privately Held</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestOnly__c</fullName>
        <label>Interest Only</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InterestRate__c</fullName>
        <label>Interest Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LenderReferralType__c</fullName>
        <label>Lender Referral Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lender__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Lender</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Affiliate</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Loan</relationshipLabel>
        <relationshipName>Lender</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LessClosingCosts__c</fullName>
        <label>Less Closing Costs</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LienPosition__c</fullName>
        <label>Lien Position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8+</fullName>
                </value>
                <value>
                    <fullName>Unsecured Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MissingLoanDetails__c</fullName>
        <formula>IF(RecordType.DeveloperName = &apos;OutOfPocket&apos;, IF(Amount__c = 0, &quot;One of the following fields are missing: Amount&quot;, &quot;Passed&quot;) ,
IF(
OR(
ISPICKVAL(TermType__c, &quot;&quot;),
Amount__c = 0,
InterestRate__c = 0 ,
ISBlank(TEXT(YourRoleAsMortgageUnderwriter__c)),
ISBlank(text(YourRoleAsMortgageOriginator__c )),
ISBlank(DeferredTerm__c),
ISBlank(TEXT(FinancingType__c)),
ISBlank(TEXT(FundingType__c)),
ISBlank(TEXT(FundingSource__c))
),&quot;One of the following fields are missing: NWO Role as mortgage underwriter, NWO role as mortgage originator, Interest Rate,Deferred Term,Financing Type, Amount, &amp;/or Term Length.&quot;,
&quot;Passed&quot;
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Missing Loan Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthlyMortgageInsuranceAmount__c</fullName>
        <label>Monthly Mortgage Insurance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyPI__c</fullName>
        <label>Monthly PI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyPayment__c</fullName>
        <formula>MonthlyMortgageInsuranceAmount__c  +  MonthlyPI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MortgageGrantType__c</fullName>
        <label>Mortgage Grant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>First Mortgage</fullName>
                </value>
                <value>
                    <fullName>Second Mortgage</fullName>
                </value>
                <value>
                    <fullName>Third Mortgage</fullName>
                </value>
                <value>
                    <fullName>DPA</fullName>
                </value>
                <value>
                    <fullName>HELOC</fullName>
                </value>
                <value>
                    <fullName>Reverse Mortgage/HECM</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MortgageInsuranceType__c</fullName>
        <label>Mortgage Insurance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>FHA</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>RHS</fullName>
                </value>
                <value>
                    <fullName>Private Mortgage Insurance</fullName>
                </value>
                <value>
                    <fullName>Other Mortgage Insurance</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>CONV</fullName>
                    <isActive>false</isActive>
                    <label>CONV</label>
                </value>
                <value>
                    <fullName>USDA</fullName>
                    <isActive>false</isActive>
                    <label>USDA</label>
                </value>
                <value>
                    <fullName>USDA (Monthly premium)</fullName>
                    <isActive>false</isActive>
                    <label>USDA (Monthly premium)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MortgageTypeAfter__c</fullName>
        <label>Mortgage Type After</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10 - year ARM</fullName>
                </value>
                <value>
                    <fullName>Interest Only</fullName>
                </value>
                <value>
                    <fullName>40 - year fixed</fullName>
                </value>
                <value>
                    <fullName>2 - year ARM</fullName>
                </value>
                <value>
                    <fullName>30 - year fixed</fullName>
                </value>
                <value>
                    <fullName>20 - year fixed</fullName>
                </value>
                <value>
                    <fullName>15 - year fixed</fullName>
                </value>
                <value>
                    <fullName>10 - year fixed</fullName>
                </value>
                <value>
                    <fullName>1 - year ARM</fullName>
                </value>
                <value>
                    <fullName>3 - year ARM</fullName>
                </value>
                <value>
                    <fullName>5 - year ARM</fullName>
                </value>
                <value>
                    <fullName>7 - year ARM</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MortgageType__c</fullName>
        <label>Mortgage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - year ARM</fullName>
                </value>
                <value>
                    <fullName>3 - year ARM</fullName>
                </value>
                <value>
                    <fullName>Interest Only</fullName>
                </value>
                <value>
                    <fullName>7 - year ARM</fullName>
                </value>
                <value>
                    <fullName>15 - year fixed</fullName>
                </value>
                <value>
                    <fullName>40 - year fixed</fullName>
                </value>
                <value>
                    <fullName>20 - year fixed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>2 - year ARM</fullName>
                </value>
                <value>
                    <fullName>10 - year ARM</fullName>
                </value>
                <value>
                    <fullName>10 - year fixed</fullName>
                </value>
                <value>
                    <fullName>30 - year fixed</fullName>
                </value>
                <value>
                    <fullName>5 - year ARM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NWOServices__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NWO Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NetLoanAmount__c</fullName>
        <formula>Amount__c - LessClosingCosts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>